// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Shellbar Basic 1`] = `
<div
  className="fd-shellbar fd-shellbar--l"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <span
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </span>
    <span
      className="fd-shellbar__title"
    >
      Corporate Portal
    </span>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-shellbar-profile-popover"
                aria-expanded={false}
                aria-haspopup={true}
                className="fd-button fd-shellbar__button fd-shellbar__button--user-menu"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="fd-avatar fd-avatar--xs fd-avatar--accent-color-8 fd-avatar--circle fd-shellbar__avatar--circle"
                  role=""
                >
                  JS
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Shellbar Co Pilot 1`] = `
<div
  className="fd-shellbar fd-shellbar--l"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <span
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </span>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            aria-controls="fd-shellbar-product-popover"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-button fd-button--transparent fd-shellbar__button--menu fd-button--menu"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          >
            <span
              className="fd-button__text fd-shellbar__title"
            >
              Corporate Portal
            </span>
            <i
              aria-hidden={true}
              className="sap-icon--megamenu fd-shellbar__button--icon"
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--copilot"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-shellbar__input-group"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      className="fd-shellbar__input-group fd-input-group"
                      onClick={[Function]}
                    >
                      <input
                        className="fd-input fd-input-group__input fd-shellbar__input-group__input"
                        onChange={[Function]}
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                      <span
                        className="fd-shellbar__input-group__addon fd-input-group__addon fd-input-group__addon--button"
                      >
                        <button
                          aria-label="Search"
                          className="fd-button fd-button--transparent fd-shellbar__button fd-input-group__button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--search"
                            role="img"
                          />
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-controls="fd-shellbar-actions-popover-0"
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Settings"
              className="fd-button fd-shellbar__button"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <i
                aria-hidden={true}
                className="sap-icon--settings"
                role="img"
              />
              <span
                className="fd-button__text"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification fd-shellbar__counter--notification"
                >
                  5
                </span>
                Settings
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            aria-controls="fd-shellbar-notifications-popover"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-shellbar__action fd-shellbar__action--desktop"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <button
              aria-label="Notifications"
              className="fd-button fd-shellbar__button"
              type="button"
            >
              <i
                aria-hidden={true}
                className="sap-icon--bell"
                role="img"
              />
              <span
                className="fd-button__text"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                  2
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--mobile"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-controls="fd-shellbar-mobile-action-popover"
              aria-expanded={false}
              aria-haspopup={true}
              className="fd-shellbar-collapse--control"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                className="fd-button fd-shellbar__button"
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--overflow"
                  role="img"
                />
                <span
                  className="fd-button__text"
                >
                  <span
                    aria-label="Unread count"
                    className="fd-counter fd-counter--notification"
                  >
                     
                    7
                     
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-shellbar-profile-popover"
                aria-expanded={false}
                aria-haspopup={true}
                className="fd-button fd-shellbar__button fd-shellbar__button--user-menu"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="fd-avatar fd-avatar--xs fd-avatar--accent-color-8 fd-avatar--circle fd-shellbar__avatar--circle"
                  role=""
                >
                  JS
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-product-switch"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-shellbar-product-switch-popover"
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Product Switch"
                className="fd-button fd-product-switch__control fd-shellbar__button"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--grid"
                  role="img"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Shellbar Dev 1`] = `
<div
  className="fd-shellbar fd-shellbar--s"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <span
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </span>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            aria-controls="fd-shellbar-product-popover"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-button fd-button--transparent fd-shellbar__button--menu fd-button--menu"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          >
            <span
              className="fd-button__text fd-shellbar__title"
            >
              Corporate Portal
            </span>
            <i
              aria-hidden={true}
              className="sap-icon--megamenu fd-shellbar__button--icon"
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--copilot"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-shellbar__input-group"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      className="fd-shellbar__input-group fd-input-group"
                      onClick={[Function]}
                    >
                      <input
                        className="fd-input fd-input-group__input fd-shellbar__input-group__input"
                        onChange={[Function]}
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                      <span
                        className="fd-shellbar__input-group__addon fd-input-group__addon fd-input-group__addon--button"
                      >
                        <button
                          aria-label="Search"
                          className="fd-button fd-button--transparent fd-shellbar__button fd-input-group__button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--search"
                            role="img"
                          />
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-controls="fd-shellbar-actions-popover-0"
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="Settings"
              className="fd-button fd-shellbar__button"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <i
                aria-hidden={true}
                className="sap-icon--settings"
                role="img"
              />
              <span
                className="fd-button__text"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification fd-shellbar__counter--notification"
                >
                  5
                </span>
                Settings
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            aria-controls="fd-shellbar-notifications-popover"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-shellbar__action fd-shellbar__action--desktop"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <button
              aria-label="Notifications"
              className="fd-button fd-shellbar__button"
              type="button"
            >
              <i
                aria-hidden={true}
                className="sap-icon--bell"
                role="img"
              />
              <span
                className="fd-button__text"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                  2
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--mobile"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-controls="fd-shellbar-mobile-action-popover"
              aria-expanded={false}
              aria-haspopup={true}
              className="fd-shellbar-collapse--control"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                className="fd-button fd-shellbar__button"
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--overflow"
                  role="img"
                />
                <span
                  className="fd-button__text"
                >
                  <span
                    aria-label="Unread count"
                    className="fd-counter fd-counter--notification"
                  >
                     
                    7
                     
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-shellbar-profile-popover"
                aria-expanded={false}
                aria-haspopup={true}
                className="fd-button fd-shellbar__button fd-shellbar__button--user-menu"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="fd-avatar fd-avatar--xs fd-avatar--accent-color-8 fd-avatar--circle fd-shellbar__avatar--circle"
                  role=""
                >
                  JS
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-product-switch"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-shellbar-product-switch-popover"
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Product Switch"
                className="fd-button fd-product-switch__control fd-shellbar__button"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--grid"
                  role="img"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Shellbar No Styles 1`] = `
<div
  className="xxx-shellbar xxx-shellbar--l"
>
  <div
    className="xxx-shellbar__group xxx-shellbar__group--product"
  >
    <span
      className="xxx-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </span>
    <span
      className="xxx-shellbar__title"
    >
      Corporate Portal
    </span>
  </div>
  <div
    className="xxx-shellbar__group xxx-shellbar__group--actions"
  >
    <div
      className="xxx-shellbar__action xxx-shellbar__action--desktop"
    >
      <div
        className="xxx-shellbar__input-group"
      >
        <div
          className="xxx-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="xxx-popover__control"
            >
              <div
                className="xxx-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="xxx-popover__control"
                  >
                    <div
                      className="xxx-shellbar__input-group xxx-input-group"
                      onClick={[Function]}
                    >
                      <input
                        className="xxx-input xxx-input-group__input xxx-shellbar__input-group__input"
                        onChange={[Function]}
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                      <span
                        className="xxx-shellbar__input-group__addon xxx-input-group__addon xxx-input-group__addon--button"
                      >
                        <button
                          aria-label="Search"
                          className="xxx-button xxx-button--transparent xxx-shellbar__button xxx-input-group__button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--search"
                            role="img"
                          />
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="xxx-shellbar__action xxx-shellbar__action--mobile"
    >
      <div
        className="xxx-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="xxx-popover__control"
          >
            <div
              aria-controls="xxx-shellbar-mobile-action-popover"
              aria-expanded={false}
              aria-haspopup={true}
              className="xxx-shellbar-collapse--control"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                className="xxx-button xxx-shellbar__button"
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--overflow"
                  role="img"
                />
                <span
                  className="xxx-button__text"
                >
                  <span
                    aria-label="Unread count"
                    className="xxx-counter xxx-counter--notification"
                  >
                     
                     
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="xxx-shellbar__action xxx-shellbar__action--show-always"
    >
      <div
        className="xxx-user-menu"
      >
        <div
          className="xxx-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="xxx-popover__control"
            >
              <button
                aria-controls="xxx-shellbar-profile-popover"
                aria-expanded={false}
                aria-haspopup={true}
                className="xxx-button xxx-shellbar__button xxx-shellbar__button--user-menu"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="xxx-avatar xxx-avatar--xs xxx-avatar--accent-color-8 xxx-avatar--circle xxx-shellbar__avatar--circle"
                  role=""
                >
                  JS
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Shellbar With Back Button 1`] = `
<div
  className="fd-shellbar fd-shellbar--l"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <button
      aria-label="Back button"
      className="fd-button fd-button--transparent fd-shellbar__button"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden={true}
        className="sap-icon--nav-back"
        role="img"
      />
    </button>
    <span
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </span>
    <span
      className="fd-shellbar__title"
    >
      Corporate Portal
    </span>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-shellbar-profile-popover"
                aria-expanded={false}
                aria-haspopup={true}
                className="fd-button fd-shellbar__button fd-shellbar__button--user-menu"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="fd-avatar fd-avatar--xs fd-avatar--accent-color-8 fd-avatar--circle fd-shellbar__avatar--circle"
                  role=""
                >
                  JS
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Shellbar With Product Menu 1`] = `
<div
  className="fd-shellbar fd-shellbar--l"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <span
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </span>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            aria-controls="fd-shellbar-product-popover"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-button fd-button--transparent fd-shellbar__button--menu fd-button--menu"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          >
            <span
              className="fd-button__text fd-shellbar__title"
            >
              Corporate Portal
            </span>
            <i
              aria-hidden={true}
              className="sap-icon--megamenu fd-shellbar__button--icon"
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-shellbar__input-group"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-popover"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      className="fd-shellbar__input-group fd-input-group"
                      onClick={[Function]}
                    >
                      <input
                        className="fd-input fd-input-group__input fd-shellbar__input-group__input"
                        onChange={[Function]}
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                      <span
                        className="fd-shellbar__input-group__addon fd-input-group__addon fd-input-group__addon--button"
                      >
                        <button
                          aria-label="Search"
                          className="fd-button fd-button--transparent fd-shellbar__button fd-input-group__button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            aria-hidden={true}
                            className="sap-icon--search"
                            role="img"
                          />
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <button
        aria-label="Notifications"
        className="fd-button fd-shellbar__button"
        type="button"
      >
        <i
          aria-hidden={true}
          className="sap-icon--bell"
          role="img"
        />
        <span
          className="fd-button__text"
        >
          <span
            aria-label="Unread count"
            className="fd-counter fd-counter--notification"
          >
            2
          </span>
        </span>
      </button>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--mobile"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-controls="fd-shellbar-mobile-action-popover"
              aria-expanded={false}
              aria-haspopup={true}
              className="fd-shellbar-collapse--control"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <button
                className="fd-button fd-shellbar__button"
                type="button"
              >
                <i
                  aria-hidden={true}
                  className="sap-icon--overflow"
                  role="img"
                />
                <span
                  className="fd-button__text"
                >
                  <span
                    aria-label="Unread count"
                    className="fd-counter fd-counter--notification"
                  >
                     
                    2
                     
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                aria-controls="fd-shellbar-profile-popover"
                aria-expanded={false}
                aria-haspopup={true}
                className="fd-button fd-shellbar__button fd-shellbar__button--user-menu"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="fd-avatar fd-avatar--xs fd-avatar--thumbnail fd-avatar--circle fd-shellbar__avatar--circle"
                  role="presentation"
                  style={
                    Object {
                      "backgroundImage": "url(./assets/headshot-male.jpg)",
                    }
                  }
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
